# module-ttt

./: README.md  pyproject.toml
.dvc/: config
app/api/: documents.py  public.py  validators.py
app/model/: jobs.py
app/services/: job_context.py  job_daemon.py  jobs.py  workers.py
