[project]
name = "module-ttt"
version = "2.0.0"
description = "Module implementing TalkingDB's symbolic text to tree workflows."
authors = [
    { name = "immkg", email = "mayank.g@smarter.codes" }
]
readme = "README.md"
requires-python = ">=3.12,<3.14"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"

fastapi = ">=0.125.0,<0.126.0"
uvicorn = { version = ">=0.38.0,<0.39.0", extras = ["standard"] }

dotenv = ">=0.9.9,<0.10.0"
python-dotenv = ">=1.2.1,<2.0.0"
python-multipart = ">=0.0.20,<0.0.21"

debugpy = ">=1.8.19,<2.0.0"
networkx = "^3.6.1"

talkingdb-models = { path = "../base-tdb-models", develop = true }
talkingdb-clients = { path = "../base-tdb-clients", develop = true }
talkingdb-helpers = { path = "../base-tdb-helpers", develop = true }
package-content-elementizer = { path = "../package-content-elementizer", develop = true }
uvloop = "^0.22.1"
httptools = "^0.7.1"
spacy = "^3.8.11"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
